--- a/src/Pages/mbg/Main-bg/Main.scss
+++ b/src/Pages/mbg/Main-bg/Main.scss
@@ -1,550 +1,541 @@
 body {
-    margin: 0;
-    left:0;
-    height:100%;
-    background-color: #fafafa;
+  margin: 0;
+  left: 0;
+  height: 100%;
+  background-color: #fafafa;
 }
 
 a {
-    text-decoration: none;
-    background-color: unset;
+  text-decoration: none;
+  background-color: unset;
 }
 
 .barOutline {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    width: 935px;
-    height: 52px;
-    padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 935px;
+  height: 52px;
+  padding: 0 20px;
 }
 
 .logoOutline {
-    width:360px;
-    height:36px;
-    padding-top: 16px;
+  width: 360px;
+  height: 36px;
+  padding-top: 16px;
 }
 
 .logo {
-    width:103px;
-    height:29px;
-    bottom: 0;
+  width: 103px;
+  height: 29px;
+  bottom: 0;
 }
 
 .iconsOutline {
-    padding-top: 12px;
-    width:360px;
-    height:22px;
-    background-color: white;
+  padding-top: 12px;
+  width: 360px;
+  height: 22px;
+  background-color: white;
 }
 
 .icons {
-    float:right;
-    display: flex;
-    justify-content: space-between;
-    padding: 2px 0 0 24px;
-    width:198px;
-    height:22px;
+  float: right;
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 0 0 24px;
+  width: 198px;
+  height: 22px;
 }
 
 .homeIcon {
-    width: 23px;
-    height: 23px;
+  width: 23px;
+  height: 23px;
 }
 
 .messageIcon {
-    width: 23px;
-    height: 23px;
-  }
-
+  width: 23px;
+  height: 23px;
+}
 
 .exploreIcon {
-    width: 23px;
-    height: 23px;
+  width: 23px;
+  height: 23px;
 }
 
 .activityIcon {
-    width: 23px;
-    height: 23px;
+  width: 23px;
+  height: 23px;
 }
 
 .profileIcon {
-    
-    width: 25px;
-    height: 25px;
-    border: #E3E3E3 1px solid;
-    border-radius: 50%;
-    margin-top: -2px;
+  width: 25px;
+  height: 25px;
+  border: #e3e3e3 1px solid;
+  border-radius: 50%;
+  margin-top: -2px;
 }
 
 .searchBarOutline {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.searchBarItems{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.searchBarItems {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .searchButton {
-    width : 199px;
-    height: 12px;
-    padding: 7px;
-    border-radius: 3px;
-    border: #dbdbdb 1px solid;
+  width: 199px;
+  height: 12px;
+  padding: 7px;
+  border-radius: 3px;
+  border: #dbdbdb 1px solid;
 }
 
-.searchButton::placeholder {  
-    text-align: center; 
+.searchButton::placeholder {
+  text-align: center;
 }
-
 
 .searchIcon {
-    width: 10px;
-    height: 10px;
-    background-repeat : no-repeat;
-    background-size : cover;
+  width: 10px;
+  height: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .searchWord {
-    position: absolute;
+  position: absolute;
 }
 
 .mainBar {
-    position: fixed;
-    top:0;
-    left:0;
-    right:0;
-    width: 100%;
-    height: 53px;
-    border-bottom: #dbdbdb 1px solid;
-    background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 53px;
+  border-bottom: #dbdbdb 1px solid;
+  background-color: white;
 }
 
-
 .mainPage {
-    top: 0;
-    left:0;
-    right:0;
-    width: 100%;
-    height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .outLine {
-    margin: auto;
-    width: 935px;
-    height: 100%;
+  margin: auto;
+  width: 935px;
+  height: 100%;
 }
-
 
 .mainContents {
-    float: left;
-    margin-top: 84px;
-    width: 614px;
-    height: 1500px;
-    margin-right: 28px;
+  float: left;
+  margin-top: 84px;
+  width: 614px;
+  height: 1500px;
+  margin-right: 28px;
 }
 
 .storyBar {
-    width:604px;
-    height:84px;
-    border: #dbdbdb solid 1px ;
-    border-radius: 3px;
-    margin: 0 0 24px;
-    padding: 16px 0 16px 8px;
-    background-color: white;
+  width: 604px;
+  height: 84px;
+  border: #dbdbdb solid 1px;
+  border-radius: 3px;
+  margin: 0 0 24px;
+  padding: 16px 0 16px 8px;
+  background-color: white;
 }
 
 .storyBar {
-    overflow: hidden; 
-    display: flex;
-    justify-content: left;
-    list-style: none;
+  overflow: hidden;
+  display: flex;
+  justify-content: left;
+  list-style: none;
 }
 .storyProfile {
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    margin: 4px;
-  }
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  margin: 4px;
+}
 
 .storyOutline {
-    width: 64px;
-    height: 64px;
-    border: #f75a3b solid 2px; 
-    border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  border: #f75a3b solid 2px;
+  border-radius: 50%;
 }
 
 .storyContents {
-    width: 76px;
-    height: 122px;
-    padding: 0 7px;
+  width: 76px;
+  height: 122px;
+  padding: 0 7px;
 }
 
 .storyOutline p {
-    margin: 0;
-    padding-top:2px;
-    width: auto;
-    height: 14px;
-    color: #262626;
-    font-size: 11px ;
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  margin: 0;
+  padding-top: 2px;
+  width: auto;
+  height: 14px;
+  color: #262626;
+  font-size: 11px;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .feedContents {
-    width: 614px;
-    height: 916px;
-    border: #dbdbdb solid 1px ;
-    border-radius: 3px;
-    margin: 0 -1px 60px;
-    background-color: white;
+  width: 614px;
+  height: 916px;
+  border: #dbdbdb solid 1px;
+  border-radius: 3px;
+  margin: 0 -1px 60px;
+  background-color: white;
 }
 
-
 .profileHeader {
-    width: 568px;
-    height: 28px;
-    padding: 16px;
-    left: 4px;
-    border-bottom: #dbdbdb 1px solid;
+  width: 568px;
+  height: 28px;
+  padding: 16px;
+  left: 4px;
+  border-bottom: #dbdbdb 1px solid;
 }
 
 .feedUploader {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .uploaderPhoto {
-    width: 30px;
-    height: 30px;
-    border: #dbdbdb solid 1px;
-    border-radius: 50%;
-    margin-top: -2px;
+  width: 30px;
+  height: 30px;
+  border: #dbdbdb solid 1px;
+  border-radius: 50%;
+  margin-top: -2px;
 }
 
 .uploaderOutline {
-    display: flex;
-    justify-content: space-between;
-    width: 538px;
-    height: 26px;
-    margin: 0 0 0 12px;
+  display: flex;
+  justify-content: space-between;
+  width: 538px;
+  height: 26px;
+  margin: 0 0 0 12px;
 }
 
 .uploaderOutline p {
-    margin-top: 1px;
-    width: auto;
-    height: 16px;
-    font-size: 14px;
-    font-weight: bold;
+  margin-top: 1px;
+  width: auto;
+  height: 16px;
+  font-size: 14px;
+  font-weight: bold;
 }
 
-button{
-    width: 20px;
-    height: 20px;
-    margin: 0;
-    background: none;
-    border: none;
-    outline: none;
-    }
+button {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  background: none;
+  border: none;
+  outline: none;
+}
 
 .moreInfo {
-    width: 16px;
-    height: 16px;
-    margin: auto 0;
+  width: 16px;
+  height: 16px;
+  margin: auto 0;
 }
-
 
 .feedPhoto {
-    margin: 20px 0  0 -16px;
-    width: 614px;
-    height: 614px;
+  margin: 20px 0 0 -16px;
+  width: 614px;
+  height: 614px;
 }
 
-
-
 .reactionContents {
-    margin: -4px 0  0 -16px;
-    width: 614px;
-    height: auto;
-    background-color: white;
+  margin: -4px 0 0 -16px;
+  width: 614px;
+  height: auto;
+  background-color: white;
 }
 
 .reactionBar {
-    width: 582px;
-    height: 40px;
-    margin: 4px 0 0;
-    padding: 0 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 582px;
+  height: 40px;
+  margin: 4px 0 0;
+  padding: 0 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .reactionIcons {
-    padding-top: 20px;
-    width: 100px;
-    display: flex;
-    justify-content: space-between;
+  padding-top: 20px;
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .reactionBar .activityIcon {
-    width: 24px;
-    height: 24px;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .reactionBar .messageIcon {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .replyIcon {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .bookmarkIcon {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .likeNumberBar {
-    width: 582px;
-    height: 18px;
-    margin: 0 0 8px;
-    padding: 0 16px;
+  width: 582px;
+  height: 18px;
+  margin: 0 0 8px;
+  padding: 0 16px;
 }
 
 .likePeople {
-    border: 0;
-    outline: 0;
-    cursor: pointer;
-    height: 18px;
-    width:auto;
-    padding: 0;
-    top: 0;
-    font-size: 14px;
-    color: #262626;
-    font-weight: bold;
-    background-color: white;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  height: 18px;
+  width: auto;
+  padding: 0;
+  top: 0;
+  font-size: 14px;
+  color: #262626;
+  font-weight: bold;
+  background-color: white;
 }
 
 .textBar {
-    width: 582px;
-    height: 88px;
-    padding: 0 16px;
-    color: #262626;
-    font-size: 14px;
+  width: 582px;
+  height: 88px;
+  padding: 0 16px;
+  color: #262626;
+  font-size: 14px;
 }
 
 ul {
-    padding:0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .writersComment {
-    width: 582px;
-    height: 18px;
-    padding-bottom: 5px;
-} 
+  width: 582px;
+  height: 18px;
+  padding-bottom: 5px;
+}
 
 .totalReply {
-    height:18px;
-    padding-bottom: 6px;
-    color: slategray;
+  height: 18px;
+  padding-bottom: 6px;
+  color: slategray;
 }
 
 .updateTime {
-    width: 598px;
-    height: 20px;
-    padding: 0 0 0 16px;
-    margin: 0 0 4px;
-    font-size: 10px;
-    color: #8e8e8e;
+  width: 598px;
+  height: 20px;
+  padding: 0 0 0 16px;
+  margin: 0 0 4px;
+  font-size: 10px;
+  color: #8e8e8e;
 }
 
-.inputBar{
-    width: 583px;
-    height: 56px;
-    margin: 4px 0 0;
-    padding: 0 16px;
-    border-top:#dbdbdb 1px solid;
+.inputBar {
+  width: 583px;
+  height: 56px;
+  margin: 4px 0 0;
+  padding: 0 16px;
+  border-top: #dbdbdb 1px solid;
 }
-
 
 #createComment {
-    width: 540.23px;
-    height: 54px;
-    border: 0;
-    outline: 0;
-    margin: 5px auto;
-    cursor: auto;
-    font-size: 14px;
-    color: #8e8e8e;
+  width: 540.23px;
+  height: 54px;
+  border: 0;
+  outline: 0;
+  margin: 5px auto;
+  cursor: auto;
+  font-size: 14px;
+  color: #8e8e8e;
 }
 
-.comment{
-    height: 20px;
+.comment {
+  height: 20px;
 }
 
-.push {
-    float: right;
-    border: 0;
-    outline: 0;
-    cursor: pointer;
-    width: 28px;
-    height: 18px;
-    margin: 17px auto;
-    padding: 0;
-    font-size: 15px;
-    font-weight: bolder;
+#push {
+  float: right;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  width: 28px;
+  height: 18px;
+  margin: 17px auto;
+  padding: 0;
+  font-size: 15px;
+  font-weight: bolder;
+  color: skyblue;
+
+&.active {
     color: blue;
-    background-color: #ffffff;
+    cursor: pointer;
 }
 
 .sideBar {
-    float: left;
-    width: 293px;
-    height: 506px;
-    margin: 85px 0 30px;
+  float: left;
+  width: 293px;
+  height: 506px;
+  margin: 85px 0 30px;
 }
 
 .Bio {
-    position: fixed;
-    width: 293px;
-    height: 616px;
+  position: fixed;
+  width: 293px;
+  height: 616px;
 }
 
 .profile {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 293px;
-    height: 56px;
-    margin-top: 23px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 293px;
+  height: 56px;
+  margin-top: 23px;
 }
 
 .nameOutline {
-    width: 180px
+  width: 180px;
 }
 
 .userChange {
-    width: 22.09px;
-    height: 14px;
-    margin: -2px 0 -3px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #0095f6;
+  width: 22.09px;
+  height: 14px;
+  margin: -2px 0 -3px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #0095f6;
 }
 
 .profilePhoto {
-    width:56px;
-    height: 56px;
-    border-radius: 50%;
-    border: #8e8e8e 1px solid;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: #8e8e8e 1px solid;
 }
 
 .profileName {
-    width: 200.91px;
-    height: 18px;
-    padding-bottom: 5px;
+  width: 200.91px;
+  height: 18px;
+  padding-bottom: 5px;
 }
 
 a {
-    width: 12px;
-    height: 15px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #262626;
+  width: 12px;
+  height: 15px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #262626;
 }
 
-.profileKoreaName{
-    width: 200.91px;
-    height: 18px;
-    font-size: 14px;
-    color: #8e8e8e  
+.profileKoreaName {
+  width: 200.91px;
+  height: 18px;
+  font-size: 14px;
+  color: #8e8e8e;
 }
 
 .recommendProfile {
-    margin:0 0 12px -16px;
-    width: 325px;
-    height: 291px;
+  margin: 0 0 12px -16px;
+  width: 325px;
+  height: 291px;
 }
 
 .recommendForUser {
-    display: flex;
-    justify-content: space-between;
-    width: 293px;
-    height: 11px;
-    margin: 18px 0 0;
-    padding: 4px 16px;
- }
+  display: flex;
+  justify-content: space-between;
+  width: 293px;
+  height: 11px;
+  margin: 18px 0 0;
+  padding: 4px 16px;
+}
 
- .recommendWord {
-    width: 245.5px;
-    height: 18px;
-    margin: -3px 0 -4px;
-    color: #8e8e8e;
-    font-size: 14px;
-    font-weight: bold;
- }
+.recommendWord {
+  width: 245.5px;
+  height: 18px;
+  margin: -3px 0 -4px;
+  color: #8e8e8e;
+  font-size: 14px;
+  font-weight: bold;
+}
 
 .showAll {
-    right: 0;
-    width: 48px;
-    height: 14px;
-    color: #262626;
-    margin: -2px 0 -3px;
-    font-size: 12px;
-    font-weight: bold;
+  right: 0;
+  width: 48px;
+  height: 14px;
+  color: #262626;
+  margin: -2px 0 -3px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .recommendUserList {
-    width: 321px;
-    height: 256px;
-    padding: 8px 0;
-
+  width: 321px;
+  height: 256px;
+  padding: 8px 0;
 }
 
 .recommendUser {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 293px;
-    height: auto;
-    padding: 3px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 293px;
+  height: auto;
+  padding: 3px 16px;
 }
 
 .recommendUserPhoto {
-    width: 32px;
-    height: 32px;
-    border: #8e8e8e solid 1px;
-    border-radius: 50%;
-    background-repeat: no-repeat;
-    background-size : cover;
+  width: 32px;
+  height: 32px;
+  border: #8e8e8e solid 1px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-
 .recProfile {
-    width: 203.88px;
-    height: auto;
-    margin: -2px 0 3px;
-    padding-top: 2px;
-    font-size: 12px;
-    color: #8e8e8e;
-    word-break:normal;
+  width: 203.88px;
+  height: auto;
+  margin: -2px 0 3px;
+  padding-top: 2px;
+  font-size: 12px;
+  color: #8e8e8e;
+  word-break: normal;
 }
 
 .follow {
-    width: 33.13px;
-    height: 14px;
-    color:#0095f6;
-    margin: -2px 0 -3px;
-    font-size: 12px;
-    font-weight: bold;
+  width: 33.13px;
+  height: 14px;
+  color: #0095f6;
+  margin: -2px 0 -3px;
+  font-size: 12px;
+  font-weight: bold;
 }
