commit 날려먹고 복구완료

--- a/src/Pages/hth/MainHTH/MainHTH.scss
+++ b/src/Pages/hth/MainHTH/MainHTH.scss
@@ -43,6 +43,7 @@
         .search-input {
           height: 28px;
           width: 250px;
+          margin: 0 20px;
           text-align: center;
           border: 1px solid rgba(var(--b6a, 219, 219, 219), 1);
           border-radius: 3px;
@@ -67,7 +68,7 @@
           border-radius: 3px;
           background-color: white;
           width: 290px;
-          margin-left: -20px;
+
         }
       }
 
