댓글 기능 수정 중

--- a/src/Pages/mbg/Login-bg/Login.scss
+++ b/src/Pages/mbg/Login-bg/Login.scss
@@ -194,6 +194,12 @@ main {
   background-color: #ffffff;
 }
 
+#signUp {
+  width: 30px;
+  height: 20px;
+  color: blue;
+}
+
 .app_down_form {
   display: flex;
   flex-direction: column;
