--- a/src/Pages/ara/Login.js/Login.scss
+++ b/src/Pages/ara/Login.js/Login.scss
@@ -1,35 +1,3 @@
-body{
-    background-color: #fafafa;
-
-}
-
-.Login {
-    background-color: #fafafa;
-    /* background-color: blue; */
-    display: flex;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.extraPad1{
-    padding-top:50px;
-}
-.extraPad2{
-    padding-top:60px;
-}
-.extraPad3{
-    padding-top:60px;
-}
-.containerMain{
-    display: flex;
-    justify-content: center;
-}
-.containerArticle{
-    display: flex;
-}
-
 
 @media (min-width:500px) and (max-width: 900px) {
 
@@ -38,124 +6,124 @@ body{
     }
 }
 
-.mainLeft{
-    display:flex;
-    margin-top: -34px;
-    padding-right: 15px;
-}
-.mainRight{
-    margin-top: 5px;
+.Login {
+    padding-top:50px;
+
+    background-color: #fafafa;
+    /* background-color: blue; */
     display: flex;
-    flex-direction: column;
-    width:350px;
-    height: 580px;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
-
-
+    .containerMain{
+        display: flex;
+        justify-content: center;
+        .containerArticle{
+            display: flex;
+            .mainLeft{
+                display:flex;
+                margin-top: -34px;
+                padding-right: 15px;
+            }
+            .mainRight{
+                margin-top: 5px;
+                display: flex;
+                flex-direction: column;
+                width:350px;
+                height: 580px;
+                justify-content: center;
+                align-items: center;
+                .logSec1{
+                    display:flex;
+                    flex-direction: column;
+                    background-color: white;
+                    border: 1px #dbdbdb solid;
+                    justify-content:center;
+                    align-items: center;
+                    width:350px;
+                    height:345px;
+                    margin:0px 0px 10px;
+                    padding:10px 0px;
+                    .logSec1_title{ 
+                        padding-top: 25px;
+                        display: flex;
+                        justify-content:center;
+                        font-family:"Lobster",serif;
+                        font-size: 40px;
+                        margin-top:-20px;
+                        .inputContainer {
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
-.logSec1{
-    display:flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px #dbdbdb solid;
-    justify-content:center;
-    align-items: center;
-    width:350px;
-    height:345px;
-    margin:0px 0px 10px;
-    padding:10px 0px;
-    
-
-}
-.logSec1_title{ 
-    padding-top: 25px;
-    display: flex;
-    justify-content:center;
-    font-family:"Lobster",serif;
-    font-size: 40px;
-    margin-top:-20px;
-}
-
-.logSec1_1{ 
+.logSecId{ 
     display:flex; 
     padding-bottom:3px;
+    .userNameInput{
+        font-size:12px;
+        background-color: #fafafa;
+        border: 1px solid #dbdbdb;
+        border-radius: 3px;
+        width: 258px;
+        height: 26px;
+        padding: 7px 0px 5px 6px; 
+    }
+    .userNameInput::placeholder {
+        padding-left:1%;
+    }
 }
-
-
-.userNameInput{
-    font-size:12px;
-    background-color: #fafafa;
-    border: 1px solid #dbdbdb;
-    border-radius: 3px;
-    width: 258px;
-    height: 26px;
-    padding: 7px 0px 5px 6px; 
-}
-.userNameInput::placeholder {
-    padding-left:1%;
-}
-/* .logSec1_1 input {
-    font-size:12px;
-    background-color: #fafafa;
-    border: 1px solid #dbdbdb;
-    border-radius: 3px;
-    width: 258px;
-    height: 26px;
-    padding: 7px 0px 5px 6px; 
-
-} */
-
-.logSec1_2{ 
+.logSecPw{ 
     display:flex; 
     justify-content: flex-end;
     padding-top:3px;
     padding-bottom:5px;
+    .passWordInput{
+        position: relative;
+        font-size:12px;
+        background-color: #fafafa;
+        border: 1px solid #dbdbdb;
+        border-radius: 3px;
+        width: 258px;
+        height: 26px;
+        padding: 7px 0px 5px 6px; 
+        
+    }
+    .passWordInput::placeholder {
+        padding-left:1%;
+    }
+    .showPw{
+        position: absolute;
+        padding-top: 10px;
+        padding-right: 7px;
+        font-weight: 450;
+        font-size: 13px;
+    }
 }
-
-
-.passWordInput{
-    position: relative;
-    font-size:12px;
-    background-color: #fafafa;
-    border: 1px solid #dbdbdb;
-    border-radius: 3px;
-    width: 258px;
-    height: 26px;
-    padding: 7px 0px 5px 6px; 
+.logSecBtn{ 
+    display:flex;
+    padding-top:8px;
+    .disabledBtn {
+        border-radius: 3px;
+        width: 266px;
+        height: 33px;
+        color: white;
+        background-color: #b9dffc;
+        border: 1px solid #b9dffc;
+    }
+    .enabledBtn{
+        border-radius: 3px;
+        width: 266px;
+        height: 33px;
+        color: white;
+        background-color: #0095f6;
+        border: 1px solid #0095f6;
+    } 
 }
-.passWordInput::placeholder {
-    padding-left:1%;
-}
-.showPw{
-    position: absolute;
-    
-    padding-top: 10px;
-    padding-right: 7px;
-    font-weight: 450;
-    font-size: 13px;
-}
-
-
-#logSec1_3{ display:flex;padding-top:8px;}
-
- .disabledBtn {
-    border-radius: 3px;
-    width: 266px;
-    height: 33px;
-    color: white;
-    background-color: #b9dffc;
-    border: 1px solid #b9dffc;
-}
-.enabledBtn{
-    border-radius: 3px;
-    width: 266px;
-    height: 33px;
-    color: white;
-    background-color: #0095f6;
-    border: 1px solid #0095f6;
-} 
-.logSec1_4{ 
+.logSecUnderBtn{ 
     font-size: 12px; 
     display:flex; 
     flex-direction: row; 
@@ -163,29 +131,38 @@ body{
     align-items: center;
     padding-top:10px;
     padding-bottom:20px;
-}
-.line1{ 
-    width: 31%;
-    height:65%;
-    padding-right: 10px;
-}
-.line2{ 
-    width: 31%;
-    height:65%;
-    padding-left: 10px;
-}
-.logSec1_5{ display:flex;}
-.logSec1_5 a{
-    color: #385185;
-    font-size: 14px;
-    font-weight: bold;
-}
-.facebook { width: 8%; height:75%; padding-right: 3px;}
-.logSec1_6{ display:flex; padding-top: 5px;}
-.logSec1_6 p{
-    color: #385185;
-    font-size: 12px;
+    .line1{ 
+        width: 31%;
+        height:65%;
+        padding-right: 10px;
     }
+    .line2{ 
+        width: 31%;
+        height:65%;
+        padding-left: 10px;
+    }
+}
+
+.logSecFb{ 
+    display:flex;
+    a{
+        color: #385185;
+        font-size: 14px;
+        font-weight: bold;
+        img {
+            width: 8%; height:75%; padding-right: 3px;
+        }
+    }
+}
+.logSec1_6{ 
+    display:flex; 
+    padding-top: 5px;
+    p{
+        color: #385185;
+        font-size: 12px;
+    }
+}
+ 
 .logSec2{
     background-color: white;
     font-size: 13px;
@@ -197,33 +174,30 @@ body{
     align-items: center;
     margin: 0px 0px 10px;
     padding: 10px 0px;
+    .logSec2_2{
+        margin-left: 5px;
+        color: #00a2ff;
+        font-weight: 710;
+    }
+}
 
-}
-.logSec2_1{}
-.logSec2_2{
-    color: #00a2ff;
-    font-weight: 710;
-}
 .logSec3{
     display:flex;
     font-size: 14px;
     flex-direction: column;
     justify-content:center;
     align-items: center;
-    
     width: 350px;
     height: 102px;
     margin-top: -7px;
+    .logSec3_1{
+        display:flex;
+        flex-direction: row;
+        padding-top: 18px
+    }
     
 }
-.logSec3_1{
-    display:flex;
-    flex-direction: row;
-    padding-top: 18px
-    
 
-}
 .asImg{padding-right: 13px;}
 .gsasImg{padding-left: 13px;}
-/* #logSec3_1 a {} */
 
