--- a/src/Pages/ara/Main.js/Main.scss
+++ b/src/Pages/ara/Main.js/Main.scss
@@ -1,42 +1,5 @@
-/* .bodyClass { background-color:#fafafa} */
 
-@media (mind-width: 1300px) and (max-width: 1870) {
-  #allSectionId {
-    width: auto;
-  }
-}
-@media (min-width: 500px) and (max-width: 700px) {
-  #thisMainId {
-    padding-left: 1px;
-    width: auto;
-  }
-  #searchId {
-    display: none;
-  }
-  #logoId {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  #iconSecId {
-    align-items: flex-end;
-  }
-  #icon1,
-  #icon2,
-  #icon3,
-  #icon4,
-  #icon5 {
-    padding-left: 1px;
-    padding-right: 1px;
-  }
-}
-@media (min-width: 300px) and (max-width: 1000px) {
-  #mainRightSecId {
-    display: none;
-    right: 1%;
-  }
-}
-
-.allSection {
+.Main {
   background-color: #fafafa;
   display: flex;
   flex-direction: column;
@@ -289,8 +252,38 @@
     }
   }
 }
-
-// .extraPad4 {
-//   height: 33px;
-// }
-
+@media (mind-width: 1300px) and (max-width: 1870) {
+  #allSectionId {
+    width: auto;
+  }
+}
+@media (min-width: 500px) and (max-width: 700px) {
+  #thisMainId {
+    padding-left: 1px;
+    width: auto;
+  }
+  #searchId {
+    display: none;
+  }
+  #logoId {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #iconSecId {
+    align-items: flex-end;
+  }
+  #icon1,
+  #icon2,
+  #icon3,
+  #icon4,
+  #icon5 {
+    padding-left: 1px;
+    padding-right: 1px;
+  }
+}
+@media (min-width: 300px) and (max-width: 1000px) {
+  #mainRightSecId {
+    display: none;
+    right: 1%;
+  }
+}
