--- a/src/Pages/mbg/Login-bg/Login.scss
+++ b/src/Pages/mbg/Login-bg/Login.scss
@@ -19,39 +19,70 @@ main {
   height: 722px;
   margin: 32px auto;
   padding-bottom: 32px;
-}
 
-.loginOutline {
-  margin-top: 50px;
-}
+  .login_cover_img {
+    background-image: url("https://www.instagram.com/static/images/homepage/home-phones.png/43cc71bb1b43.png");
+    position: relative;
+    width: 454px;
+    height: 618px;
+  }
 
-.chang_img {
-  position: absolute;
-  top: 98px;
-  left: 150px;
-  width: 241px;
-  height: 430px;
-}
+  .chang_img {
+    position: absolute;
+    top: 98px;
+    left: 150px;
+    width: 241px;
+    height: 430px;
+  }
+  .flex_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.login_form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-top: 40px;
-}
+  .loginOutline {
+    margin-top: 30px;
 
-.flex_center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.logo_img {
-  background-color: #ffffff;
-  width: 175px;
-  height: 51px;
-  margin: 30px 0;
+    .login_form {
+      width: 350px;
+      height: 380px;
+      background-color: #ffffff;
+      margin-bottom: 10px;
+
+      .login_data_form {
+        background-color: #ffffff;
+      }
+
+      input {
+        width: 260px;
+        height: 36px;
+        background: #fafafa;
+        border: 0;
+      }
+      .showPw {
+        position: relative;
+        width: 0;
+        float: left;
+        top: 5px;
+        left: 230px;
+      }
+    }
+
+    .login_form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid #dbdbdb;
+
+      .logo_img {
+        background-color: #ffffff;
+        width: 175px;
+        height: 51px;
+        margin: 30px 0;
+      }
+    }
+  }
 }
 
 .in_txt_box {
@@ -59,118 +90,77 @@ main {
   border: 1px solid #dbdbdb;
   border-radius: 3px;
   margin: 3px;
-}
 
-.in_txt_box input {
-  width: 268px;
-  height: 43px;
-  outline: none;
-  margin-left: 8px;
-  font-size: 13px;
-}
-
-#login_btn {
-  background-color: #b2dffc;
-  color: White;
-  border: none;
-  border-radius: 4px;
-  width: 268px;
-  height: 30px;
-  margin-top: 14px;
-  cursor: auto;
-  outline: none;
-
-  &.active {
-    background-color: #0095f6;
-    cursor: pointer;
+  input {
+    width: 268px;
+    height: 43px;
+    outline: none;
+    margin-left: 8px;
+    font-size: 13px;
   }
-}
-
-.login_form input {
-  width: 258px;
-  height: 36px;
-  background: #fafafa;
-  border: 0;
 }
 
 .login_btn_cover {
   background-color: #ffffff;
+
+  #login_btn {
+    background-color: #b2dffc;
+    border: none;
+    border-radius: 4px;
+    width: 268px;
+    height: 30px;
+    margin-top: 14px;
+    cursor: pointer;
+    outline: none;
+
+    &.active {
+      background-color: #0095f6;
+      cursor: pointer;
+    }
+  }
 }
+
 .other_login {
   position: relative;
   top: -20px;
-}
-
-.other_login div {
   background-color: #ffffff;
-}
 
-.other_login span {
-  background-color: #ffffff;
-}
+  div {
+    font-size: 14px;
+    font-weight: bold;
+    background-color: #ffffff;
+  }
 
-.f_b_icon {
-  display: inline-block;
-  position: relative;
-  width: 16px;
-  height: 16px;
-  background-position: -414px -259px;
-  top: 2px;
-}
-
-.search_pwd {
-  font-size: 12px;
-}
-
-.other_login div {
-  font-size: 14px;
-  font-weight: bold;
+  .search_pwd {
+    font-size: 13px;
+    background-color: #ffffff;
+  }
 }
 
 .form_line {
+  height: 50px;
+  width: 268px;
+  margin: 10px 0 18px 0;
   display: flex;
   font-size: 12px;
-  color: #8e8e8e;
   font-weight: bold;
-}
-
-.form_line div {
-  margin: 5px 0;
   background-color: #ffffff;
-}
 
-.txt_line {
-  position: relative;
-  background: #dbdbdb;
-  width: 90px;
-  height: 1px;
-  top: 10px;
-}
-
-.login_cover_img {
-  background-image: url("https://www.instagram.com/static/images/homepage/home-phones.png/43cc71bb1b43.png");
-  position: relative;
-  width: 454px;
-  height: 618px;
-}
-
-.login_form {
-  width: 350px;
-  height: 380px;
-  background-color: #ffffff;
-  border: 1px solid #dbdbdb;
-  margin-bottom: 10px;
-}
-
-.login_form input {
-  width: 289px;
-  height: 36px;
-  background: #fafafa;
-  border: 0;
-}
-
-.login_form > div {
-  background-color: #ffffff;
+  .txt_line {
+    position: relative;
+    background: #dbdbdb;
+    width: 120px;
+    height: 1px;
+    top: 17px;
+  }
+  div {
+    position: relative;
+    background-color: #ffffff;
+    width: 30px;
+    top: 8px;
+    font-size: 14px;
+    color: #8e8e8e;
+  }
 }
 
 .sign_form {
@@ -181,23 +171,24 @@ main {
   font-size: 14px;
   font-weight: 300;
   border: 1px solid #dbdbdb;
-  margin-bottom: 10px;
-}
 
-.sign_form > div {
-  padding-top: 20px;
-  background-color: #ffffff;
-}
+  div {
+    padding-top: 20px;
+    background-color: #ffffff;
+  }
 
-.sign_form a {
-  text-decoration: none;
-  background-color: #ffffff;
-}
+  #signUp {
+    width: 60px;
+    height: 20px;
+    font-size: 13px;
+    color: blue;
+    cursor: pointer;
+  }
 
-#signUp {
-  width: 30px;
-  height: 20px;
-  color: blue;
+  a {
+    text-decoration: none;
+    background-color: #ffffff;
+  }
 }
 
 .app_down_form {
@@ -208,22 +199,15 @@ main {
   width: 350px;
   height: 102px;
   font-size: 13px;
-  background-color: #ffffff;
-}
-.app_down_form div {
-  margin: 10px 0;
-}
+  padding-top: 20px;
+  background: #fafafa;
 
-.app_down_form img {
-  width: 136px;
-  height: 40px;
-}
+  div {
+    margin: 10px 0;
+  }
 
-.helper {
-  position: absolute;
-  font-size: 12px;
-  top: 10px;
-  left: 10px;
-  color: #8e8e8e;
-  height: 13px;
+  img {
+    width: 136px;
+    height: 40px;
+  }
 }
