--- a/src/Pages/hth/LoginHTH/LoginHTH.scss
+++ b/src/Pages/hth/LoginHTH/LoginHTH.scss
@@ -119,9 +119,7 @@
     }
 
     .notice-p {
-      margin: 0 auto;
-      margin-top: 30px;
-      margin-bottom: 20px;
+      margin: 30px auto 20px;
       font-size: 12px;
       text-decoration: none;
       color: #5f7e9f;
