mentor review applied:

--- a/src/Pages/ara/Login/Footer.scss
+++ b/src/Pages/ara/Login/Footer.scss
@@ -1,7 +1,5 @@
 .Footer{
-    padding-top:60px;
-    padding-bottom:60px;
-    /* border: 1px solid; */
+    padding-top:60px 0;
     display: flex;   
     justify-content: center;
     flex-direction: column;
