--- a/src/Pages/ara/Login/Login.scss
+++ b/src/Pages/ara/Login/Login.scss
@@ -16,6 +16,10 @@
                 display:flex;
                 margin-top: -34px;
                 padding-right: 15px;
+                img {
+                    width: 400px;
+                    height: 618px;
+                }
             }
             .mainRight{
                 margin-top: 5px;
