--- a/src/Styles/Common.scss
+++ b/src/Styles/Common.scss
@@ -1,19 +1,19 @@
-// .block {
-//     display: block;
-//   }
+.block {
+    display: block;
+  }
   
 //   * {
 //     box-sizing: border-box;
 //   }
   
-//   html {
-//     background-color: #fafafa;
-//   }
+  html {
+    background-color: #fafafa;
+  }
   
-//   input {
-//     outline: none;
-//   }
+  input {
+    outline: none;
+  }
   
-//   .hidden {
-//     display: none;
-//   }
+  .hidden {
+    display: none;
+  }
