--- a/src/Pages/ara/Main/Main.scss
+++ b/src/Pages/ara/Main/Main.scss
@@ -114,7 +114,7 @@
         flex-direction: column;
         width: 655px;
       }
-      .mainRightSec {
+      .mainSubSec {
         display: flex;
         flex-direction: column;
         right: 25%;
@@ -122,7 +122,7 @@
         margin-left: 1%;
         .fixedDiv {
           position: fixed;
-          .rightFeed1 {
+          .subFeedTop {
             display: flex;
             align-items: center;
             width: 96%;
@@ -150,12 +150,12 @@
               width:50px;
             }
           }
-          .rightFeed2 {
+          .subFeedMid {
             display: flex;
             flex-direction: column;
             // width: auto;
             height: 318px;
-            .rightFeed2Head {
+            .subFeedMidHead {
               display: flex;
               // justify-content: space-between;
               padding-right: 1px;
@@ -213,7 +213,7 @@
               }
             }
           }
-          .rightFeed3 {
+          .subFeedFooterTop {
             padding-top: 10px;
             display: flex;
             color: #cccccc;
@@ -225,7 +225,7 @@
               margin: 1px 1px;
             }
           }
-          .rightFeed4 {
+          .subFeedFooterBottom {
             padding-top: 2px;
             color: #cccccc;
             display: flex;
@@ -237,7 +237,7 @@
               margin: 1px 1px;
             }
           }
-          .rightFeed5 {
+          .subFeedFooterLast {
             display: flex;
             color: #cccccc;
             /* border: 1px solid red; */
