Add: 댓글 스크롤 기능

--- a/src/Pages/hth/MainHTH/Components/Article/ArticleSection.scss
+++ b/src/Pages/hth/MainHTH/Components/Article/ArticleSection.scss
@@ -44,7 +44,6 @@
     .comment-like {
       font-size: 14px;
       margin-left: 15px;
-      margin-bottom: 10px;
 
       .like-nickname {
         font-weight: bold;
@@ -52,8 +51,10 @@
     }
 
     .comment-list {
-      margin: 15px;
+      margin: 5px 15px;
       font-size: 14px;
+      height: 90px;
+      overflow-y: auto;
     }
 
     .input-box {
