--- a/src/Pages/hth/MainHTH/Components/Article/Components/Comment/Comment.scss
+++ b/src/Pages/hth/MainHTH/Components/Article/Components/Comment/Comment.scss
@@ -1,4 +1,6 @@
 .Comment {
+  display: flex;
+  justify-content: space-between;
   margin-top: 10px;
 
   &:hover .delete-button {
@@ -17,19 +19,14 @@
     border: none;
     font-size: 14px;
     background-color: white;
-    position: absolute;
-    right: 35px;
     opacity: 0;
     outline: none;
-    margin-top: -7px;
-    padding-bottom: 5px;
   }
 
   .like-button {
-    position: absolute;
-    right: 15px;
     color: black;
     cursor: pointer;
+    margin-right: 10px;
   }
 
   .fas {
